// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H5 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 20.02,
      "lineHeight": 25.33,
      "paddingBottom": 3.15,
      "paddingTop": 4.5,
    }
  }
>
  "Faith does not eliminate questions. But faith knows where to take them." ― Elisabeth Elliot
</Text>
`;

exports[`the H5 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "Colfax-Bold",
      "fontSize": 20.02,
      "lineHeight": 25.33,
      "paddingBottom": 3.15,
      "paddingTop": 4.5,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H5 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 20.02,
      "lineHeight": 25.33,
      "paddingBottom": 3.15,
      "paddingTop": 4.5,
    }
  }
>
  Default H5 text
</Text>
`;
